# router/userRouter.go
@@ -49,6 +49,8 @@ func UsersSetupsRoutes(app *fiber.App) {
 	// user.Get("/physical-health-months", jwt, logEntry.PhysicalHealthInsightMonths)
 	user.Get("/logentry-info/:id", jwt, logEntry.FetchLogEntryById)
 	user.Put("/edit-appointment/:id", jwt, logEntry.UpdateLogEntry)
+	user.Put("/edit-physicalHealth/:id", jwt, logEntry.UpdatePhysicalHealth)
+	user.Put("/edit-mentalHealth/:id", jwt, logEntry.UpdateMentalHealth)
 	user.Get("/yearly-insights", jwt, logEntry.YearlyInsights)
 	user.Get("/get-future-appointments", jwt, logEntry.FetchFutureAppointments)
 
